--- a/style.css
+++ b/style.css
@@ -48,3 +48,7 @@ html, body {
     border-radius: 20px;
     box-shadow: 10px 10px 10px rgb(0, 0, 0);
  }
+ .row input:hover {
+    background-color: 
+ }
+ 
